# keystone

./: 0001-fix-buildroot-paths.patch  Makefile  README.md
examples/: CMakeLists.txt
examples/profile/: CMakeLists.txt  run.sh
examples/profile/eapp/: export.c  receiver.c  sender.c  util.c  util.h
examples/profile/host/: host.cpp
examples/vta/: CMakeLists.txt
examples/vta/download/: download.cc
examples/vta/eapp/direct/: CMakeLists.txt  vta.cc
examples/vta/eapp/export/: CMakeLists.txt  driver.cc  export_func.cc  logic.cc
examples/vta/eapp/linux_owned/: CMakeLists.txt  linux_owned.cc
examples/vta/eapp/msg-pass/: CMakeLists.txt  receiver.cc  sender.c
examples/vta/eapp/shared/: images.cc  operator-lib.c  operator-lib.ld.S  platform.cc
examples/vta/host/: host.cpp  host_vta.cpp
examples/vta/include/: download.h  images.h  interface.h  platform.h  vta_export.h
examples/vta/scripts/: run-direct.sh  run-export.sh  run-linux-owned.sh  run-msg-pass.sh
examples/vta/util/: util.c  util.h
linux-keystone-driver/: Makefile  keystone-enclave.c  keystone-ioctl.c  keystone-page.c  keystone.c  keystone.h
mkutils/plat/generic/: run.mk
overlays/keystone/: external.mk
overlays/keystone/board/mpfs/microchip/: post-build.sh
overlays/keystone/boot/hss/: 0003-handle-ancillary-data.patch  0004-keep-return-codes.patch  hss.mk
overlays/keystone/configs/: linux64-defconfig  linux64-mpfs-defconfig  qemu_riscv64_virt_defconfig  riscv64_mpfs_defconfig
overlays/keystone/package/keystone-examples/: keystone-examples.mk
overlays/keystone/package/u-dma-buf/: Config.in  u-dma-buf.mk
overlays/keystone/patches/gcc/: 0001-enable-static-pie.patch
overlays/keystone/patches/glibc/: 0001-enable-static-pie.patch
overlays/keystone/patches/opensbi/: opensbi-keep-return-codes.patch
overlays/keystone/patches/qemu/: 0003-qemu-add-vta.patch  0004-qemu-add-secure-cma.patch.disabled
overlays/tvm/configs/: uboot-fragment-rootfs.config
overlays/tvm/package/tvm/: 0002-new-vta-targets.patch  0003-fix-crt.patch  Config.in  tvm.mk
overlays/tvm/package/vta-driver/: vta-driver.mk
overlays/tvm/patches/linux/: 0001-add-vta-polarfire.patch.conditional
runtime/: CMakeLists.txt  runtime.ld.S
runtime/call/: callee.S  callee.c  linux_wrap.c  net_wrap.c  sbi.c  syscall.c
runtime/drivers/: serial.c  vta.c
runtime/include/call/: callee.h  linux_wrap.h  sbi.h
runtime/include/mm/: mm.h  vm.h  vm_defs.h
runtime/include/sys/: boot.h  env.h  thread.h
runtime/mm/: freemem.c  mm.c  vm.c
runtime/sys/: CMakeLists.txt  boot.c  entry.S  env.c  thread.c
runtime/tmplib/: uaccess.h
scripts/gdb/: mpfs.cfg  pmp.py
sdk/: macros.cmake
sdk/include/app/: callee.h  export.h  syscall.h
sdk/include/edge/: edge_syscall.h
sdk/include/host/: Enclave.hpp  KeystoneDevice.hpp
sdk/include/shared/: eyrie_call.h  keystone_user.h  profile_util.h  sm_call.h  sm_err.h
sdk/src/app/: CMakeLists.txt  callee.c  export_link.ld  export_wrap.c  syscall.c
sdk/src/edge/: edge_syscall.c
sdk/src/host/: Enclave.cpp  KeystoneDevice.cpp
sm/src/: device.c  enclave.c  pmp.c  pmp.h  sm-sbi-opensbi.c  sm.c
sm/src/platform/generic/: platform.h
sm/src/platform/mpfs/: platform.c  platform.h
tvm/tvm_device/: keystone_driver.cc  keystone_driver.h  keystone_mem.cc  polarfire_driver.cc  polarfire_mem.cc
tvm/vta_driver/: vta.c
